syntax = "proto3";
package heimdallv2.checkpoint;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/0xPolygon/heimdall-v2/x/checkpoint/types";

message CheckpointSignature {
  bytes validator_address = 1 [ (amino.dont_omitempty) = true ];
  bytes signature = 2 [ (amino.dont_omitempty) = true ];
}

message CheckpointSignatures {
  repeated CheckpointSignature signatures = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}
